Fix custom menu z-index and add an option to pull it into the Awesomebar

--- a/style/awesomebar.css
+++ b/style/awesomebar.css
@@ -17,6 +17,10 @@
 #awesomebar ul.dropdown ul {left:0px; right:auto;}
 #awesomebar ul.dropdown ul ul {left:100%;}
 #awesomebar ul.dropdown li span {width:auto; padding-left:8px; padding-right:8px;}
+#awesomebar ul.dropdown li span.customitem {width:auto; padding:2px 8px 4px 8px;border-color:#404040 #1a1a1a #1a1a1a #505050;border-style:solid;border-width:1px;}
+#awesomebar ul.dropdown li span.customitem a {border: 0px none;padding:0;width:auto;background-image:none;background-color:transparent;}
+#awesomebar ul.dropdown li li span.customitem a {width:145px;}
+#awesomebar ul.dropdown li li span.customitem {padding-left:5px;border-left:0px none;}
 #awesomebar ul.dropdown ul span {width:145px; padding-left:20px; padding-right:6px;}
 #awesomebar #awesomeHomeMenu ul span {width:125px; padding-left:20px; padding-top:4px;}
 #awesomebar #awesomeHomeMenu ul a {width:146px; padding-top:4px;}
